--- a/app/src/main/res/layout/activity_select_game_mode_remake.xml
+++ b/app/src/main/res/layout/activity_select_game_mode_remake.xml
@@ -8,20 +8,18 @@
     tools:context=".SelectGameModeRemakeActivity">
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".2"
-        android:id="@+id/top_guide"
-        />
+        app:layout_constraintGuide_percent=".2" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bot_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".8"
-        android:id="@+id/bot_guide"
-        />
+        app:layout_constraintGuide_percent=".8" />
 
     <ImageView
         android:id="@+id/main_logo_imageview"
@@ -34,8 +32,7 @@
         app:layout_constraintBottom_toTopOf="@id/bot_guide"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_guide"
-         />
+        app:layout_constraintTop_toBottomOf="@id/top_guide" />
 
     <ImageButton
         android:id="@+id/resident_evil_umbrella_imageview"
@@ -44,25 +41,24 @@
         android:layout_marginBottom="304dp"
         android:background="@drawable/rebigbrella"
         android:scaleType="fitCenter"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.863"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/selectortext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/med_spacing"
         android:text="Select Game"
         android:textColor="@color/white"
         android:textSize="50sp"
         android:textStyle="italic"
-        android:layout_marginTop="@dimen/med_spacing"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-       />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
         android:id="@+id/select_game_type_switch"
@@ -70,10 +66,10 @@
         android:layout_height="wrap_content"
         android:scaleX="2.1"
         android:scaleY="2.1"
-        app:layout_constraintTop_toBottomOf="@id/bot_guide"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bot_guide"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
