--- a/app/src/main/res/layout/activity_resident_evil_menu.xml
+++ b/app/src/main/res/layout/activity_resident_evil_menu.xml
@@ -6,4 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".ResidentEvilMenuActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black" />
+
+    <ImageView
+        android:id="@+id/resident_evil_background_imageview"
+        android:layout_width="329dp"
+        android:layout_height="565dp"
+        android:background="@drawable/rejillvalentine"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/reumbrellalogo"
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
