--- a/app/src/main/res/layout/activity_resident_evil_menu.xml
+++ b/app/src/main/res/layout/activity_resident_evil_menu.xml
@@ -10,7 +10,9 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black" />
+        android:background="@color/black"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/resident_evil_background_imageview"
@@ -22,15 +24,82 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        />
 
-    <ImageButton
+
+    <ImageView
+        android:layout_width="274dp"
+        android:layout_height="88dp"
+        android:background="@drawable/reumbrellalogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/reumbrellalogo"
+        android:text="SHOOT!"
+        android:textColor="@color/white"
+        app:layout_constraintBaseline_toTopOf="@id/shooting_menu_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="50dp"
+        />
 
+    <ImageButton
+        android:id="@+id/shooting_menu_button"
+        android:layout_width="106dp"
+        android:layout_height="106dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="350dp"
+        android:background="@drawable/residentevilogjilldodgevector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DODGE!"
+        android:textColor="@color/white"
+        app:layout_constraintBaseline_toTopOf="@id/dodge_menu_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="50dp"
+        />
 
+    <ImageButton
+        android:id="@+id/dodge_menu_button"
+        android:layout_width="106dp"
+        android:layout_height="106dp"
+        android:background="@drawable/residenteviljillvalentineclorfuldodge"
+        app:layout_constraintTop_toBottomOf="@+id/shooting_menu_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="300dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OPEN DOOR"
+        android:textColor="@color/white"
+        app:layout_constraintBaseline_toTopOf="@id/open_door_menu_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="50dp"
+        />
 
+    <ImageButton
+        android:id="@+id/open_door_menu_button"
+        android:layout_width="106dp"
+        android:layout_height="106dp"
+        android:background="@drawable/residenteviljillopendoorvector"
+        app:layout_constraintTop_toBottomOf="@id/dodge_menu_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="150dp"
+        />
 
 
 
