--- a/app/src/main/res/layout/activity_resident_evil_dodge_menu.xml
+++ b/app/src/main/res/layout/activity_resident_evil_dodge_menu.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResidentEvilDodgeMenuActivity">
+    tools:context=".residentevil.ResidentEvilDodgeMenuActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
