--- a/app/src/main/res/layout/activity_resident_evil_shooting_dice.xml
+++ b/app/src/main/res/layout/activity_resident_evil_shooting_dice.xml
@@ -4,6 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResidentEvilShootingDiceActivity">
+    tools:context=".residentevil.ResidentEvilShootingDiceActivity">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_of_zombie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".2"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bot_of_zombie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".8"
+
+        />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        />
+
+    <ImageView
+        android:id="@+id/resident_evil_zombie_one"
+        android:layout_width="200dp"
+        android:layout_height="400dp"
+        android:background="@drawable/rezombieone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/shooting_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="Shoot!!!"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/reload_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Load Gun!"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/shooting_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <ImageButton
+        android:id="@+id/gun_shooting_image_button"
+        android:background="@drawable/residenteviljillvalentinesillouettevector"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+       app:layout_constraintTop_toBottomOf="@id/reload_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/shooting_text"
+        />
+
+    <ImageButton
+        android:id="@+id/gun_reload_image_button"
+        android:background="@drawable/resident_evil_shooting_jill"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintStart_toStartOf="@id/bot_of_zombie"
+        app:layout_constraintTop_toBottomOf="@id/shooting_text"
+        app:layout_constraintBottom_toTopOf="@id/bot_of_zombie"
+        />
+
+    <ImageView
+        android:id="@+id/resident_evil_umbrella_imageview"
+        android:layout_width="274dp"
+        android:layout_height="88dp"
+        android:background="@drawable/reumbrellalogo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
