--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="med_spacing">50dp</dimen>
+    <dimen name="small_spacing">10dp</dimen>
 </resources>
